--- a/src/scss/artist.scss
+++ b/src/scss/artist.scss
@@ -133,7 +133,7 @@
           height: 250px; 
           width: 100%; 
 
-          margin-bottom: 17px;   //18px
+          margin-bottom: 16px;   //18px
         }
     }
 
@@ -175,7 +175,7 @@
           height: 250px; 
           width: 100%; 
 
-          margin-bottom: 17px;    //18px
+          margin-bottom: 16px;    //18px
         }
     }
 
